# mesa-gui

./: README.md  pyproject.toml
mesa_gui/: manage.py
mesa_gui/mesa/: __init__.py  admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
mesa_gui/mesa/fixtures/: mesajobs.json
mesa_gui/mesa/migrations/: 0001_initial.py  0002_mesajob.py  0003_alter_mesajob_finished_at_alter_mesajob_started_at.py  0004_mesajob_relative_output_folder.py  0005_alter_mesajob_relative_output_folder.py  0006_settings_exclusions_settings_scope.py  0007_mesajob_pid.py  0008_mesajob_visible.py  0009_settings_customer_details.py  0010_removed_domain_enum_variables.py
mesa_gui/mesa/templates/: base.html  dashboard-all-checks-card.html  dashboard-job-table.html  demo.html  home.html  job.html  settings.html  sidebar.html  topbar.html
mesa_gui/mesa/templates/registration/: login.html
mesa_gui/mesa_gui/: asgi.py  settings.py  urls.py  wsgi.py
mesa_gui/static_files/css/: sb-admin-2.css  sb-admin-2.min.css
